# commitment-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  lefthook.yml
docs/: constitution.md
docs/constitutions/v1/: architecture.md  meta.md  patterns.md  tech-stack.md  testing.md
docs/constitutions/v2/: architecture.md  meta.md  patterns.md  tech-stack.md  testing.md
docs/plans/: 2025-12-09-rust-port-design.md
specs/0e67da-parity-enhancements/: plan.md  spec.md
specs/25ec7e-commitment-rs-port/: plan.md  spec.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  prompt.rs  types.rs
src/agents/: claude.rs  codex.rs  gemini.rs  mod.rs
src/hooks/: managers.rs  mod.rs
tests/: integration_tests.rs  real_agent_tests.rs
tests/fixtures/: mod.rs
tests/fixtures/diffs/: add_tests.diff  bug_fix.diff  documentation.diff  multi_file_feature.diff  refactor_handlers.diff  simple_addition.diff
